@@ -160,6 +160,9 @@ online_refresh_html: 20
 // To log the character server?
 log_char: 1
 
+// How many Characters are allowed per Account ? (0 = disabled) [SQL Only!]
+chars_per_account: 0
+
 // What folder the DB files are in (item_db.txt, etc.)
 db_path: db
 
